force-app/main/default/objects/Opportunity/fields/Lost_reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_reason__c</fullName>
    <label>Lost reason</label>
    <length>60</length>
    <type>Text</type>
</CustomField>