force-app/main/default/objects/Opportunity/fields/oppstatus__c.field-meta.xml
<CustomField>
    <fullName>oppstatus__c</fullName>
    <formula>CASE( StageName , &quot;Closed Won&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green Flag&quot;),&quot;Closed Lost&quot;,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow Flag&quot;))</formula>
    <label>oppstatus</label>
    <type>Text</type>
</CustomField>