force-app/main/default/objects/Opportunity/fields/Paise__c.field-meta.xml
<CustomField>
    <fullName>Paise__c</fullName>
    <label>Paise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>