force-app/main/default/objects/Opportunity/fields/Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Won_Reason__c</fullName>
    <label>Won Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>