force-app/main/default/objects/Opportunity/validationRules/Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(ISPICKVAL(StageName,&quot;Closed Lost&quot;),ISBLANK( Lost_reason__c )) ,true,false )</errorConditionFormula>
    <errorDisplayField>Lost_reason__c</errorDisplayField>
    <errorMessage>Lost Reason can&apos;t be empty if stage is closed lost</errorMessage>
</ValidationRule>